--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -10,8 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ask-sdk-core": "^2.6.0",
-    "ask-sdk-model": "^1.0.0",
-    "i18next": "^10.5.0",
-    "i18next-sprintf-postprocessor": "^0.2.2"
+    "ask-sdk-model": "^1.18.0",
+    "i18next": "^10.5.0"
   }
 }
